--- a/index.html
+++ b/index.html
@@ -45,7 +45,10 @@
         <h2> White Mocha - ₹310 </h2>
 
     </ul>
-   
+    <br><br>
+    <center>
+        <a href="feedback.html">Help Us to Improve</a>
+    </center>
 </body>
 
 </html>
